--- a/Algorithm.vcxproj
+++ b/Algorithm.vcxproj
@@ -144,6 +144,7 @@
     <ClInclude Include="Algorithm\00_Algorithm.h" />
     <ClInclude Include="Algorithm\01_Big_0_Notation.h" />
     <ClInclude Include="Stack\00_Stack.h" />
+    <ClInclude Include="Stack\01_Array_Stack.h" />
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
