--- a/Algorithm.vcxproj
+++ b/Algorithm.vcxproj
@@ -141,6 +141,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Queue\00_Queue.h" />
+    <ClInclude Include="Queue\01_Linear_Queue.h" />
     <ClInclude Include="Stack\03_Stack_Calculator.h" />
     <ClInclude Include="Algorithm\00_Algorithm.h" />
     <ClInclude Include="Algorithm\01_Big_0_Notation.h" />
@@ -149,6 +151,8 @@
     <ClInclude Include="stdafx.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Queue\__Queue_Main.cpp" />
+    <ClCompile Include="Stack\_Stack_Solution.cpp" />
     <ClCompile Include="Stack\__Stack_Main.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
