--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -10,6 +10,8 @@
     <ClInclude Include="Queue\00_Queue.h" />
     <ClInclude Include="Queue\01_Linear_Queue.h" />
     <ClInclude Include="Queue\02_Circular_Queue.h" />
+    <ClInclude Include="Linked_list\00_Linked_List.h" />
+    <ClInclude Include="Linked_list\02_Double_Linked_List.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp" />
@@ -17,5 +19,6 @@
     <ClCompile Include="Stack\_Stack_Solution.cpp" />
     <ClCompile Include="Queue\__Queue_Main.cpp" />
     <ClCompile Include="Queue\_Queue_Solution.cpp" />
+    <ClCompile Include="Linked_list\__Linked_List_Main.cpp" />
   </ItemGroup>
 </Project>
