--- a/Algorithm.vcxproj.filters
+++ b/Algorithm.vcxproj.filters
@@ -12,6 +12,11 @@
     <ClInclude Include="Queue\02_Circular_Queue.h" />
     <ClInclude Include="Linked_list\00_Linked_List.h" />
     <ClInclude Include="Linked_list\02_Double_Linked_List.h" />
+    <ClInclude Include="Tree\01_LCRS_Tree.h" />
+    <ClInclude Include="Tree\00_Tree.h" />
+    <ClInclude Include="Tree\02_Binary_Tree.h" />
+    <ClInclude Include="Tree\04_Heap_Tree.h" />
+    <ClInclude Include="Linked_list\03_Ranking_List.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp" />
@@ -20,5 +25,6 @@
     <ClCompile Include="Queue\__Queue_Main.cpp" />
     <ClCompile Include="Queue\_Queue_Solution.cpp" />
     <ClCompile Include="Linked_list\__Linked_List_Main.cpp" />
+    <ClCompile Include="Tree\__Tree_Main.cpp" />
   </ItemGroup>
 </Project>
