--- a/Algorithm.vcxproj
+++ b/Algorithm.vcxproj
@@ -141,6 +141,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Graph\00_Graph.h" />
     <ClInclude Include="Linked_list\00_Linked_List.h" />
     <ClInclude Include="Linked_list\02_Double_Linked_List.h" />
     <ClInclude Include="Linked_list\03_Ranking_List.h" />
@@ -161,6 +162,7 @@
     <ClInclude Include="Tree\05_AVL_Tree.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Graph\__Graph_Main.cpp" />
     <ClCompile Include="Linked_list\__Linked_List_Main.cpp" />
     <ClCompile Include="Queue\_Queue_Solution.cpp" />
     <ClCompile Include="Queue\__Queue_Main.cpp" />
