--- a/Algorithm.vcxproj
+++ b/Algorithm.vcxproj
@@ -164,6 +164,7 @@
     <ClInclude Include="Tree\05_AVL_Tree.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Graph\_Graph_Solution.cpp" />
     <ClCompile Include="Graph\__Graph_Main.cpp" />
     <ClCompile Include="Linked_list\__Linked_List_Main.cpp" />
     <ClCompile Include="Queue\_Queue_Solution.cpp" />
