--- a/Algorithm.vcxproj
+++ b/Algorithm.vcxproj
@@ -141,6 +141,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Algorithm\Disjoint_Set.h" />
+    <ClInclude Include="Algorithm\Kruskal.h" />
     <ClInclude Include="Graph\00_Graph.h" />
     <ClInclude Include="Graph\01_BFS_Graph.h" />
     <ClInclude Include="Graph\02_DFS_Graph.h" />
@@ -164,6 +166,7 @@
     <ClInclude Include="Tree\05_AVL_Tree.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Algorithm\_Main.cpp" />
     <ClCompile Include="Graph\_Graph_Solution.cpp" />
     <ClCompile Include="Graph\__Graph_Main.cpp" />
     <ClCompile Include="Linked_list\__Linked_List_Main.cpp" />
